--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "studentvue_react_app",
   "version": "0.1.0",
-  "homepage": "https://studentvuesucks.github.io/grade-app",
+  "homepage": "https://studentvuesucks.github.io/grades",
   "private": true,
   "dependencies": {
     "axios": "^1.7.7",
